...
            "state": "translated",
            "value": "A ride starts in landscape. Change it during a ride and that is how every ride starts from then on."
          }
        }
      }
    },
    "Einstellungen": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "Pause the ride"
          }
        }
      }
    },
    "Fahrt aufzeichnen": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Record ride"
          }
        }
      }
    },
    "Fahrt beenden": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "End ride"
...
            "state": "translated",
            "value": "Error"
          }
        }
      }
    },
    "Fertig": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
...
            "state": "translated",
            "value": "My location"
          }
        }
      }
    },
    "Menü": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Menu"
...
            "state": "translated",
            "value": "Forget"
          }
        }
      }
    },
    "Verkehrsmittel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Modes"
...
